NYS-109: Ensure user menu doesn't collapse beyond largest menu item width

--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header-user-menu/nysenate-header-user-menu.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header-user-menu/nysenate-header-user-menu.scss
@@ -11,6 +11,7 @@ ul.c-login--list {
   height: 100%;
   margin-top: 0;
   padding-left: 0;
+  min-width: 180px;
 
   .c-header--btn.c-header--btn__primary {
     span.c-user-menu--shrunk-dashboard-link {
